# ICS-Satellite

./: .gitignore  CHANGELOG.md  Makefile  README.md  a  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  location_request.yml
.github/workflows/: ci.yml  location_request.yml  pages.yml  release.yml
config/: config.yaml
config/seeds/: seed_requests.yaml
data/: requests.seed.sqlite  requests.sqlite
scripts/: issueops_persist_request.py  smoke.sh  sync_issue_template.py
src/satpass/: __init__.py  build.py  catalog.py  cli.py  config.py  ics.py  io_utils.py  passes.py  planets.py  requests_db.py  seed.py  site.py  slug.py  tle.py
src/satpass/assets/site/: app.js  index.html  style.css
tests/: conftest.py  test_build.py  test_catalog.py  test_cli.py  test_config.py  test_ics.py  test_issue_template.py  test_issueops_persist.py  test_manifest.py  test_passes.py  test_planet_build.py  test_planets.py  test_requests.py  test_requests_db.py  test_seed.py  test_slug.py  test_tle.py  test_workflow_invariants.py
tests/fixtures/: sample.tle
